# Real-time-Monitoring-AND-Analytics-Dashboard

./: .gitignore  CMakeLists.txt  cpu.txt
src/: common.h  includeClass.h  main.cpp
src/LogPrint/: Logint.cpp  Logint.h
src/Model/: Request.h  SystemMetrics.h
src/Parser/: Marshal.cpp  Marshal.h
src/Server/: Agent.cpp  Agent.h  listener.cpp  listener.h
src/Utility/: ManageString.cpp  ManageString.h
src/web/: index.html
